[gd_scene load_steps=30 format=3 uid="uid://bfnwhhrbdnjlv"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_02cvl"]
[ext_resource type="Shader" path="res://scenes/levels/FX.gdshader" id="2_wkop5"]
[ext_resource type="Texture2D" uid="uid://ok6dt5grhdl8" path="res://sprites/floor_spr_2.png" id="4_l5vs5"]
[ext_resource type="Texture2D" uid="uid://dwtp4w6anxa6g" path="res://sprites/altar_floor.png" id="4_uhg5f"]
[ext_resource type="Texture2D" uid="uid://ch8hlxkcfkr3v" path="res://sprites/floor_spr_1.png" id="5_fy2ni"]
[ext_resource type="Texture2D" uid="uid://cvlfbux0mfolj" path="res://sprites/altar_floor_blood.png" id="5_mxilv"]
[ext_resource type="PackedScene" uid="uid://vr4xev738l5k" path="res://scenes/ghost.tscn" id="6_7xv8c"]
[ext_resource type="PackedScene" uid="uid://7r6dcibmyspx" path="res://scenes/character.tscn" id="8_d8f4e"]
[ext_resource type="Script" path="res://scenes/un_posses.gd" id="9_0k6o4"]
[ext_resource type="PackedScene" uid="uid://vbvj4gkeumgk" path="res://scenes/crusher.tscn" id="10_1ojrq"]
[ext_resource type="Script" path="res://scenes/Shaker.gd" id="11_388qa"]
[ext_resource type="PackedScene" uid="uid://tsknsqx06okd" path="res://scenes/dialog_zone.tscn" id="12_kqhsy"]
[ext_resource type="Texture2D" uid="uid://ba0yak3idku2" path="res://sprites/idol_mask1.png" id="13_5vjod"]
[ext_resource type="Texture2D" uid="uid://bfcnxdf3k2vr2" path="res://sprites/idol_mask2.png" id="14_ce47s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fdkir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_5vjod")
}, {
"duration": 1.0,
"texture": ExtResource("14_ce47s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_oepl4"]
resource_name = "new_animation"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IDOL:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.117647)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IDOL")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f647f"]
_data = {
"new_animation": SubResource("Animation_oepl4")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0eiud"]
shader = ExtResource("2_wkop5")
shader_parameter/apply = true
shader_parameter/amount = 0.1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t7atg"]
texture = ExtResource("4_l5vs5")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_20qmo"]
texture = ExtResource("4_uhg5f")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_50ij8"]
texture = ExtResource("5_mxilv")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rudm8"]
texture = ExtResource("5_fy2ni")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_it710"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
sources/5 = SubResource("TileSetAtlasSource_rudm8")
sources/0 = SubResource("TileSetAtlasSource_t7atg")
sources/1 = SubResource("TileSetAtlasSource_20qmo")
sources/2 = SubResource("TileSetAtlasSource_50ij8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02l11"]
size = Vector2(1179, 670)

[sub_resource type="Environment" id="Environment_oaqbm"]
background_mode = 3
ambient_light_source = 2
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1igcr"]
size = Vector2(209, 601)

[sub_resource type="Animation" id="Animation_iv2jq"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Crusher:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(14.42, 1),
"update": 0,
"values": [Vector2(1631, 360), Vector2(1631, 864)]
}

[sub_resource type="Animation" id="Animation_ierpr"]
resource_name = "new_animation_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Crusher:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(12.1257, 1),
"update": 0,
"values": [Vector2(1631, 864), Vector2(1631, 360)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_SPRING_SFX"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u7oeg"]
_data = {
"new_animation": SubResource("Animation_iv2jq"),
"new_animation_2": SubResource("Animation_ierpr")
}

[node name="LevelIntro" type="Node2D"]
script = ExtResource("1_02cvl")

[node name="IDOL" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(532, 140)
scale = Vector2(10.625, 10.625)
sprite_frames = SubResource("SpriteFrames_fdkir")
frame_progress = 0.94911

[node name="IDOL_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f647f")
}

[node name="FX" type="ColorRect" parent="."]
z_index = 4096
material = SubResource("ShaderMaterial_0eiud")
offset_left = -57.0
offset_top = -17.0
offset_right = 1214.0
offset_bottom = 678.0
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)

[node name="BlackEffect" type="ColorRect" parent="."]
visible = false
z_index = 9
offset_left = -36.0
offset_top = -32.0
offset_right = 1195.0
offset_bottom = 685.0
mouse_filter = 2
color = Color(0, 0, 0, 0.811765)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_it710")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983042, 1, 0, 983041, 1, 0, 983040, 1, 0, 1048575, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 917534, 2, 0, 917533, 2, 0, 917532, 2, 0, 917531, 2, 0, 917530, 2, 0, 917529, 2, 0, 917528, 2, 0, 917527, 2, 0, 917526, 2, 0, 917525, 2, 0, 917524, 2, 0, 1048576, 1, 0, 1114111, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1179647, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1048599, 1, 0, 1048598, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 0, 1114147, 1, 0, 1114146, 1, 0, 1114145, 1, 0, 1114144, 1, 0, 1114143, 1, 0, 1114142, 1, 0, 1114141, 1, 0, 1114140, 1, 0, 1114139, 1, 0, 1114138, 1, 0, 1114137, 1, 0, 1114136, 1, 0, 1179669, 1, 0, 1179668, 1, 0, 1179667, 1, 0, 1179666, 1, 0, 1179665, 1, 0, 1179664, 1, 0, 1179663, 1, 0, 1179662, 1, 0, 1179661, 1, 0, 1179660, 1, 0, 1179659, 1, 0, 1179658, 1, 0, 1179657, 1, 0, 1179656, 1, 0, 1179654, 1, 0, 1179653, 1, 0, 1179652, 1, 0, 1179650, 1, 0, 1179649, 1, 0, 1179648, 1, 0, 1245183, 1, 0, 1310719, 1, 0, 1245186, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245195, 1, 0, 1245196, 1, 0, 1245197, 1, 0, 1245198, 1, 0, 1245199, 1, 0, 1245200, 1, 0, 1245201, 1, 0, 1245202, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1245210, 1, 0, 1048612, 1, 0, 1114148, 1, 0, 1179684, 1, 0, 1245214, 1, 0, 1245213, 1, 0, 1179673, 1, 0, 1179672, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179683, 1, 0, 1245217, 1, 0, 1245216, 1, 0, 1245215, 1, 0, 983039, 1, 0, 917503, 1, 0, 851967, 1, 0, 786431, 1, 0, 655359, 1, 0, 589823, 1, 0, 524287, 1, 0, 720895, 1, 0, 917540, 1, 0, 852004, 1, 0, 786468, 1, 0, 720932, 1, 0, 655396, 1, 0, 589860, 1, 0, 524324, 1, 0, 458788, 1, 0, 393252, 1, 0, 327716, 1, 0, 458751, 1, 0, 393215, 1, 0, 327679, 1, 0, 262143, 1, 0, 196607, 1, 0, 131071, 1, 0, 262180, 1, 0, 196644, 1, 0, 131108, 1, 0, 65572, 1, 0, 36, 1, 0, 65535, 1, 0)
metadata/_edit_lock_ = true

[node name="ghost" parent="." instance=ExtResource("6_7xv8c")]
process_mode = 3
z_index = 10
position = Vector2(307, 164)

[node name="Area2D" type="Area2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(579.5, 325)
shape = SubResource("RectangleShape2D_02l11")
metadata/_edit_lock_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oaqbm")

[node name="character" parent="." instance=ExtResource("8_d8f4e")]
position = Vector2(116, 465)
type = 7

[node name="UnPosses" type="Area2D" parent="."]
position = Vector2(753, 419)
script = ExtResource("9_0k6o4")
_animation = NodePath("../IDOL_Animation")

[node name="collider" type="CollisionShape2D" parent="UnPosses"]
position = Vector2(144.5, -176.5)
shape = SubResource("RectangleShape2D_1igcr")

[node name="spawn_point" type="Marker2D" parent="UnPosses"]
position = Vector2(-519, -306)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UnPosses"]
libraries = {
"": SubResource("AnimationLibrary_u7oeg")
}

[node name="Crusher" parent="." instance=ExtResource("10_1ojrq")]
z_index = 4090
position = Vector2(1631, 360)
rotation = 3.14159

[node name="Shaker" type="Node2D" parent="."]
script = ExtResource("11_388qa")
_camera = NodePath("../Camera2D")

[node name="DialogZone" parent="." instance=ExtResource("12_kqhsy")]
visible = false
z_index = 4096
position = Vector2(9, 445)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="body_entered" from="UnPosses" to="UnPosses" method="_on_body_entered" flags=18]
[connection signal="animation_finished" from="UnPosses/AnimationPlayer" to="UnPosses" method="_on_animation_player_animation_finished"]
